--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bingo-extract",
   "version": "0.1.0",
   "private": true,
+  "main": "electron/main.js",
   "homepage": "./",
   "dependencies": {
     "@material-ui/core": "^4.4.3",
@@ -21,6 +22,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start-electron": "electron .",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron": "^7.1.9"
   }
 }
