--- a/package.json
+++ b/package.json
@@ -5,18 +5,18 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
-    "@types/jest": "26.0.4",
-    "@types/node": "14.0.22",
-    "@types/react": "16.9.43",
-    "@types/react-dom": "16.9.8",
+    "@types/jest": "^29.1.1",
+    "@types/node": "^18.8.2",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@types/react-redux": "^7.1.9",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-redux": "^7.2.0",
-    "react-scripts": "3.4.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "react-scripts": "^5.0.1",
     "redux": "^4.0.4",
-    "typeface-roboto": "^0.0.75",
-    "typescript": "3.9.6"
+    "typeface-roboto": "^1.1.13",
+    "typescript": "^4.8.4"
   },
   "scripts": {
     "start": "react-scripts start",
